--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "framer-motion": "^12.0.3",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
+    "sugar-high": "^0.9.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
