--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.1.3",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
+    "python-shell": "^5.0.0",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/python-shell": "^1.0.3",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
