--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-intersection-observer": "^9.15.1",
     "sugar-high": "^0.9.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wordpos": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
