--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.12.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@faker-js/faker": "^9.5.0",
     "@mui/material": "^6.4.4",
     "@mui/x-data-grid": "^7.27.0",
     "@mui/x-date-pickers": "^7.27.0",
@@ -38,6 +39,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-pdf": "^9.2.1",
+    "recharts": "^2.15.1",
     "sugar-high": "^0.9.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
