--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/x-date-pickers": "^7.27.0",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
