--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@axe-core/react": "^4.10.1",
     "@clerk/nextjs": "^6.12.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -30,10 +31,13 @@
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.21.2",
+    "axe-core": "^4.10.2",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.0.3",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-mdx-remote": "^5.0.0",
@@ -41,6 +45,7 @@
     "nodemailer": "^6.10.0",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
+    "react-axe": "^3.5.4",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
@@ -53,6 +58,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
