--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
+    "posthog-js": "^1.231.0",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-axe": "^3.5.4",
