--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sugar-high": "^0.9.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.10.7",
     "wordpos": "^2.1.0"
   },
   "devDependencies": {
